[gd_scene load_steps=24 format=3 uid="uid://diaq1g0u7ny5d"]

[ext_resource type="PackedScene" uid="uid://cgjy5x05wbked" path="res://Scenes/Triggers/baseTrigger.tscn" id="1_ud7se"]
[ext_resource type="Script" path="res://Scripts/Triggers/sodaTrigger.gd" id="2_w7a00"]
[ext_resource type="PackedScene" uid="uid://dctdthqv8shx3" path="res://Scenes/Triggers/Trigger_Helpers/SPLAT.tscn" id="3_n6q00"]
[ext_resource type="Texture2D" uid="uid://cqmvx1ogc7wkv" path="res://Art/TriggerArt/Soda/SodaEmpty.png" id="4_5kxcc"]
[ext_resource type="Texture2D" uid="uid://bps7m368s3ouf" path="res://Art/TriggerArt/Soda/SodaFull.png" id="5_b8yvd"]
[ext_resource type="Texture2D" uid="uid://dufi2jft87b0" path="res://Art/TriggerArt/Soda/SodaExploding.png" id="6_6vsdv"]
[ext_resource type="Texture2D" uid="uid://cat53lsnivf36" path="res://Art/TriggerArt/Soda/plhSpew.png" id="6_myc4p"]
[ext_resource type="PackedScene" uid="uid://jtv8ch5vvx1d" path="res://Scenes/Triggers/Trigger_Helpers/sodaBall.tscn" id="7_bn3nb"]
[ext_resource type="AudioStream" uid="uid://cy57p5i6r8ic4" path="res://Sounds/Swishes/swish1.ogg" id="8_b2bir"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8pjk5"]
atlas = ExtResource("4_5kxcc")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mavgk"]
atlas = ExtResource("5_b8yvd")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3jand"]
atlas = ExtResource("6_6vsdv")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_biga6"]
atlas = ExtResource("6_6vsdv")
region = Rect2(32, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rhcom"]
atlas = ExtResource("6_6vsdv")
region = Rect2(64, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4u2d7"]
atlas = ExtResource("6_6vsdv")
region = Rect2(96, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bxxdy"]
atlas = ExtResource("6_6vsdv")
region = Rect2(128, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3y2v"]
atlas = ExtResource("6_6vsdv")
region = Rect2(160, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tppbn"]
atlas = ExtResource("6_6vsdv")
region = Rect2(192, 0, 32, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_654dx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8pjk5")
}],
"loop": true,
"name": &"empty",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mavgk")
}],
"loop": true,
"name": &"full",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3jand")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_biga6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rhcom")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4u2d7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bxxdy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3y2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tppbn")
}],
"loop": false,
"name": &"spewing",
"speed": 3.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_1ubw0"]
atlas = ExtResource("6_myc4p")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_jtjnx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ubw0")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_h5g2t"]
resource_name = "push"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TriggerKeySprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.2, 1),
"update": 0,
"values": [Color(3.91, 3.91, 1, 1), Color(3.91, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vhhg6"]
_data = {
"push": SubResource("Animation_h5g2t")
}

[node name="sodaTrigger" node_paths=PackedStringArray("bottleSprite", "spewSprite", "sodaBall", "sound", "soundbacup", "triggerModulator") instance=ExtResource("1_ud7se")]
z_index = 40
z_as_relative = false
script = ExtResource("2_w7a00")
explosionThreshold = 40.0
shakeStrength = 5.0
shakeDecay = 0.0167
launch_speed = 1000.0
splat = true
bottleSprite = NodePath("BottleSprite")
spewSprite = NodePath("BottleSprite/SpewSprite")
sodaBall = NodePath("SodaBall")
SPLAT_PACKEDSCENE = ExtResource("3_n6q00")
sound = NodePath("BottleSprite/sounds")
soundbacup = NodePath("BottleSprite/soundbackup")
triggerModulator = NodePath("triggerModulator")

[node name="BottleSprite" type="AnimatedSprite2D" parent="." index="0"]
sprite_frames = SubResource("SpriteFrames_654dx")
animation = &"empty"

[node name="SpewSprite" type="AnimatedSprite2D" parent="BottleSprite" index="0"]
visible = false
z_index = -2
position = Vector2(0, -40)
sprite_frames = SubResource("SpriteFrames_jtjnx")

[node name="sounds" type="AudioStreamPlayer2D" parent="BottleSprite" index="1"]
stream = ExtResource("8_b2bir")
volume_db = 8.0
max_polyphony = 3
bus = &"Sound Effects"

[node name="soundbackup" type="AudioStreamPlayer2D" parent="BottleSprite" index="2"]
stream = ExtResource("8_b2bir")
volume_db = 8.0
max_polyphony = 3
bus = &"Sound Effects"

[node name="SodaBall" parent="." index="1" instance=ExtResource("7_bn3nb")]
LAUNCH_SPEED = 1000.0
SPLAT_INTERVAL = 2
SPLAT_RADIUS = 3

[node name="TriggerKeySprite" parent="." index="2"]
modulate = Color(3.91, 1, 1, 1)
position = Vector2(0, 64)

[node name="triggerModulator" type="AnimationPlayer" parent="." index="3"]
libraries = {
"": SubResource("AnimationLibrary_vhhg6")
}

[connection signal="SPLATTED" from="SodaBall" to="." method="recieve_splat"]
